2003-05-17  Jan Nieuwenhuizen  <janneke@gnu.org>

	* Documentation/user/GNUmakefile: backport: Compatibility fix for
	new makeinfo.  Please upgrade to texinfo CVS or pretest > 4.5.90
	(rsn) for making binary packages; info splitting bug has been
	fixed.

2003-05-16  Han-Wen Nienhuys  <hanwen@cs.uu.nl>

	* VERSION: release 1.6.10
	
	* lily/multi-measure-rest-engraver.cc
	(start_translation_timestep): backport of 1.7 grace + mmrest fix. 

2003-04-11  Han-Wen Nienhuys  <hanwen@cs.uu.nl>

	* python/lilylib.py.in: temporary directory vulnerability fix.

2003-04-29  Jan Nieuwenhuizen  <janneke@gnu.org>

	* GNUmakefile.in (SUBDIRS): midi2ly.1 build fix backport: build
	python before scripts (thanks Anthony).

2003-04-15  Jan Nieuwenhuizen  <janneke@gnu.org>

	* debian: Update.  Remove mentioning of `mudela'; There's no such
	thing.
	
2003-04-14  Jan Nieuwenhuizen  <janneke@gnu.org>

	* Backport flex issue:

	    * stepmake/aclocal.m4: Include compile fix for broken flex, as
	    used in includable-lexer.hh.

	    * lily/lexer.ll (avoid_silly_flex_induced_gcc_warnings): Disable.

	    * lily/includable-lexer.cc [!HAVE_FLEXLEXER_YY_CURRENT_BUFFER]
	    (yy_current_buffer): New macro, compile hacks for flex 2.5.29.

	    * lily/include/includable-lexer.hh: 
	    * lily/lexer.ll: Hack for multiple include of FlexLexer.h.

	    * config.hh.in (HAVE_FLEXLEXER_YY_CURRENT_BUFFER): Add.

	    * aclocal.m4: Regenerate.

	    * stepmake/aclocal.m4 (STEPMAKE_FLEXLEXER): Check for
	    yyFlexLexer.yy_current_buffer, which was removed in flex-2.5.29.

	* scm/pdftex.scm (start-system): Bugfix: add closing brace (Beernd
	Noordkamp).

2003-03-04  Jan Nieuwenhuizen  <janneke@gnu.org>

	* cygwin/post-lilypond.sh: Add FHS-specified path for fonts to
	clean out.

2003-04-09  Mats Bengtsson  <mats.bengtsson@s3.kth.se>

	* Documentation/topdocs/AUTHORS.texi (AUTHORS): Updated contact
	information.

2003-04-02  Mats Bengtsson  <mats.bengtsson@s3.kth.se>
