@@ -1,5 +1,8 @@
 2003-05-17  Jan Nieuwenhuizen  <janneke@gnu.org>
 
+	* scripts/*:
+	* lily/main.cc: It's 2003 already; messages only.
+
 	* Documentation/user/GNUmakefile: backport: Compatibility fix for
 	new makeinfo.  Please upgrade to texinfo CVS or pretest > 4.5.90
 	(rsn) for making binary packages; info splitting bug has been
